k8s/app/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: app
  labels:
    app: app
spec:
  ports:
    - name: peculiar
      port: 80
      targetPort: 8080
    - name: common
      port: 8888
  selector:
    app: app
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: app-deployment
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
        tier: backend
    spec:
      containers:
        - image: kimitsu/kind-backend:master@sha256:08fff2e6af01d28e1f7002208104b974e89f2c29e3315e8fe8f32e5136c88f1b
          name: app
          ports:
            - containerPort: 8080
              name: app
          command: ["main", "app", "-d"]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8888
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8888
          startupProbe:
            httpGet:
              path: /healthz
              port: 8888
            initialDelaySeconds: 3
            periodSeconds: 3
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532 # nonroot
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: registry-key
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
