k8s/app/node-port.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitor
  name: jaeger-port
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/name: jaeger
  ports:
    - nodePort: 30686
      port: 16686
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitor
  name: prom-port
spec:
  type: NodePort
  selector:
    app: prometheus
    component: server
    release: prometheus
  ports:
    - nodePort: 30090
      port: 9090
